// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders - currency 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c4 {
  font-size: 14px;
  line-height: 23px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #112035;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
  border-color: #112035;
}

.c3:hover,
.c3:focus-within {
  border-color: #112035;
}

.c6 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c6::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c6::-moz-placeholder {
  color: #D2D2D2;
}

.c6:-ms-input-placeholder {
  color: #D2D2D2;
}

.c6::placeholder {
  color: #D2D2D2;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 {
  font-family: 'Gordita',san-serif;
  font-size: 16px;
  line-height: 19px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: -3px;
}

.c8 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 16px;
    line-height: 26px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Currency
       
    </label>
  </div>
  <div
    class="c3"
    value="50"
  >
    <span
      class="c4 c5"
      color="secondary"
      cursor="inherit"
      title=""
    >
      $
    </span>
    <input
      class="c6"
      id="currencyInput"
      name="currencyInput"
      placeholder="100.00"
      type="number"
      value="50"
    />
    <div
      class="c7"
    >
      <button
        class="c8"
      >
        <span
          class="c9"
          color="subtext"
          rotate="180"
          size="24"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
              fill="#636768"
            />
          </svg>
        </span>
      </button>
      <button
        class="c8"
      >
        <span
          class="c10"
          color="subtext"
          rotate="0"
          size="24"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
              fill="#636768"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders - disabled 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:hover,
.c3:focus-within {
  border-color: #112035;
}

.c4 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: not-allowed;
  -moz-appearance: textfield;
}

.c4::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c4::-moz-placeholder {
  color: #D2D2D2;
}

.c4:-ms-input-placeholder {
  color: #D2D2D2;
}

.c4::placeholder {
  color: #D2D2D2;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Currency
       
    </label>
  </div>
  <div
    class="c3"
    disabled=""
    value=""
  >
    <input
      class="c4"
      disabled=""
      id="currencyInput"
      name="currencyInput"
      placeholder="100.00"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`renders - error 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c4 {
  font-size: 14px;
  line-height: 23px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #112035;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #D82C2C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
  border-color: #112035;
}

.c3:hover,
.c3:focus-within {
  border-color: #D82C2C;
}

.c6 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #D82C2C;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c6::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c6::-moz-placeholder {
  color: #D2D2D2;
}

.c6:-ms-input-placeholder {
  color: #D2D2D2;
}

.c6::placeholder {
  color: #D2D2D2;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c11 {
  margin-top: 7px;
  color: #D82C2C;
  font-size: 12px;
}

.c5 {
  font-family: 'Gordita',san-serif;
  font-size: 16px;
  line-height: 19px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: -3px;
}

.c8 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 16px;
    line-height: 26px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Currency
       
    </label>
  </div>
  <div
    class="c3"
    value="200"
  >
    <span
      class="c4 c5"
      color="secondary"
      cursor="inherit"
      title=""
    >
      $
    </span>
    <input
      class="c6"
      id="currencyInput"
      name="currencyInput"
      placeholder="100.00"
      type="number"
      value="200"
    />
    <div
      class="c7"
    >
      <button
        class="c8"
      >
        <span
          class="c9"
          color="subtext"
          rotate="180"
          size="24"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
              fill="#636768"
            />
          </svg>
        </span>
      </button>
      <button
        class="c8"
      >
        <span
          class="c10"
          color="subtext"
          rotate="0"
          size="24"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
              fill="#636768"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <span
    class="c11"
  >
    Oh gosh, this is an error isn't it!
  </span>
</div>
`;

exports[`renders - number 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c4 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
}

.c4:hover,
.c4:focus-within {
  border-color: #112035;
}

.c5 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c5::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c5::-moz-placeholder {
  color: #D2D2D2;
}

.c5:-ms-input-placeholder {
  color: #D2D2D2;
}

.c5::placeholder {
  color: #D2D2D2;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 {
  font-size: 14px;
  color: #00875A;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Number
       
      <span
        class="c3"
      >
        *
      </span>
    </label>
  </div>
  <div
    class="c4"
    value=""
  >
    <input
      class="c5"
      id="numberInput"
      name="numberInput"
      placeholder="0.00"
      required=""
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`renders - tel 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c4 {
  font-size: 14px;
  line-height: 23px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #112035;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
}

.c3:hover,
.c3:focus-within {
  border-color: #112035;
}

.c6 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c6::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c6::-moz-placeholder {
  color: #D2D2D2;
}

.c6:-ms-input-placeholder {
  color: #D2D2D2;
}

.c6::placeholder {
  color: #D2D2D2;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 {
  font-family: 'Gordita',san-serif;
  font-size: 16px;
  line-height: 19px;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 16px;
    line-height: 26px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Telephone number
       
    </label>
  </div>
  <div
    class="c3"
    value=""
  >
    <span
      class="c4 c5"
      color="secondary"
      cursor="inherit"
      title=""
    >
      +44
    </span>
    <input
      class="c6"
      id="tel"
      name="telephoneNumber"
      placeholder="07446875876"
      type="tel"
      value=""
    />
  </div>
</div>
`;

exports[`renders - with suffix 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c5 {
  padding-right: 8px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c6 {
  font-size: 14px;
  line-height: 23px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #112035;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
}

.c3:hover,
.c3:focus-within {
  border-color: #112035;
}

.c4 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c4::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c4::-moz-placeholder {
  color: #D2D2D2;
}

.c4:-ms-input-placeholder {
  color: #D2D2D2;
}

.c4::placeholder {
  color: #D2D2D2;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7 {
  font-family: 'Gordita',san-serif;
  font-size: 16px;
  line-height: 19px;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 16px;
    line-height: 26px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Currency
       
    </label>
  </div>
  <div
    class="c3"
    value=""
  >
    <input
      class="c4"
      id="currencyInput"
      name="currencyInput"
      placeholder="100.00"
      type="number"
      value=""
    />
    <div
      class="c5"
    >
      <span
        class="c6 c7"
        color="secondary"
        cursor="inherit"
        title=""
      >
        miles
      </span>
    </div>
  </div>
</div>
`;

exports[`renders - with trailing icon 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  color: #636768;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c4 {
  font-size: 14px;
  line-height: 23px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #112035;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c0 {
  font-family: 'Gordita',san-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c3 {
  border-bottom: 1px solid;
  border-color: #112035;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  opacity: 1;
}

.c3:hover,
.c3:focus-within {
  border-color: #112035;
}

.c6 {
  font-family: 'Gordita',san-serif;
  border: none;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  -moz-appearance: textfield;
}

.c6::-webkit-input-placeholder {
  color: #D2D2D2;
}

.c6::-moz-placeholder {
  color: #D2D2D2;
}

.c6:-ms-input-placeholder {
  color: #D2D2D2;
}

.c6::placeholder {
  color: #D2D2D2;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 {
  font-family: 'Gordita',san-serif;
  font-size: 16px;
  line-height: 19px;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 16px;
    line-height: 26px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      title=""
    >
      Currency
       
    </label>
  </div>
  <div
    class="c3"
    value=""
  >
    <span
      class="c4 c5"
      color="secondary"
      cursor="inherit"
      title=""
    >
      $
    </span>
    <input
      class="c6"
      id="currencyInput"
      name="currencyInput"
      placeholder="100.00"
      type="number"
      value=""
    />
    <span
      class="c7"
      color="subtext"
      rotate="0"
      size="24"
    >
      <svg
        fill="none"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10a1 1 0 100-2c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8c0 1.103-.897 2-2 2s-2-.897-2-2c0-2.206-1.794-4-4-4s-4 1.794-4 4 1.794 4 4 4c1.2 0 2.266-.542 3-1.382.734.84 1.8 1.382 3 1.382 2.206 0 4-1.794 4-4 0-5.514-4.486-10-10-10zm0 12c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
          fill="#636768"
        />
      </svg>
    </span>
  </div>
</div>
`;
